feat: update stats

--- a/english-puzzle/src/sass/abstract/_constants.scss
+++ b/english-puzzle/src/sass/abstract/_constants.scss
@@ -1,6 +1,6 @@
-$colorBg: rgb(221, 240, 247);
-$colorFont: rgb(39, 34, 34);
-$colorIncorrect: rgb(209, 18, 18);
-$colorCorrect: green;
-$colorBtnBg: #27972ed4;
+$colorBg: #ddf0f7;
+$colorFont: rgb(32, 28, 28);
+$colorIncorrect: tomato;
+$colorCorrect: seagreen;
+$colorBtnBg: seagreen;
 $colorBtnFont: wheat;
