--- a/english-puzzle/src/sass/style.scss
+++ b/english-puzzle/src/sass/style.scss
@@ -71,21 +71,38 @@ input {
 
 .hints {
     @include flex();
-}
-
-.hints .btn {
-    padding: 5px;
-    &:hover {
-        transform: scale(1.2);
+    .btn {
+        padding: 5px;
+        position: relative;
+        .tooltiptext {
+            @include tooltip($width: 80px, $margin-left: -40px);
+            top: 110%;
+        }
+        &:hover .tooltiptext {
+            visibility: visible;
+        }
     }
 }
 
-.hints__icon {
+.auto-speech {
+    position: relative;
+    padding: 0;
+    background-color: transparent;
+    .tooltiptext {
+        @include tooltip($width: 180px, $margin-left: -90px);
+        bottom: 110%;
+    }
+    &:hover .tooltiptext {
+        visibility: visible;
+    }
+}
+
+.icon {
     width: 30px;
     height: 30px;
-    opacity: 0.7;
     background-size: cover;
     @include transition;
+    cursor: pointer;
 }
 
 .main {
